--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "url": "https://github.com/sieira/planete/issues"
   },
   "homepage": "https://github.com/sieira/planete#readme",
-  "dependencies": {
+  "devDependencies": {
     "chai": "^3.3.0",
+    "mocha": "^2.3.3",
+    "supertest": "^1.1.0"
+  },
+  "dependencies": {
     "dotenv": "^1.2.0",
     "grunt": "^0.4.5",
     "grunt-auto-install": "^0.2.4",
     "grunt-contrib-symlink": "^0.3.0",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.3.3"
+    "grunt-mocha-test": "^0.12.7"
   }
 }
