config implemented as a proxy to process.env

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Modular Node.js CMS",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "grunt test"
+    "start": "node --harmony_proxies index",
+    "test": "node --harmony_proxies ./node_modules/.bin/grunt test"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,8 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
-    "grunt": "^0.4.5",
     "grunt-auto-install": "^0.2.4",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-symlink": "^0.3.0",
     "grunt-mocha-test": "^0.12.7"
   }
