--- a/core/backend/db/package.json
+++ b/core/backend/db/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "config",
+  "name": "db",
   "version": "1.0.0",
-  "description": "*This module is part of planète's core, whose docs can be found [here](../README.md)*",
+  "description": "*This module is part of planète's core backend, whose docs can be found [here](../README.md)*",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,6 @@
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^1.2.0",
-    "harmony-reflect": "^1.4.2"
+    "mongoose": "^4.1.9"
   }
 }
