--- a/core/backend/webserver/package.json
+++ b/core/backend/webserver/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.13.3"
   }
