--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/sieira/planete#readme",
   "devDependencies": {
     "chai": "^3.3.0",
+    "glob": "^5.0.15",
     "mocha": "^2.3.3",
     "supertest": "^1.1.0"
   },
