--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-auto-install": "^0.2.4",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-symlink": "^0.3.0",
-    "grunt-mocha-test": "^0.12.7"
+    "grunt-mocha-test": "^0.12.7",
+    "jade": "^1.11.0"
   }
 }
