--- a/core/backend/authorization/package.json
+++ b/core/backend/authorization/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "db",
+  "name": "authorization",
   "version": "1.0.0",
-  "description": "*This module is part of planète's core backend, whose docs can be found [here](../README.md)*",
+  "description": "Uses OAuth2",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +10,6 @@
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
   "license": "AGPL-3.0",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "mongoose": "^4.1.9"
+    "oauth2orize": "^1.0.1"
   }
 }
