--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
   "homepage": "https://github.com/sieira/planete#readme",
   "devDependencies": {
     "chai": "^3.3.0",
-    "glob": "^5.0.15",
     "mocha": "^2.3.3",
     "supertest": "^1.1.0"
   },
   "dependencies": {
+    "glob": "^5.0.15",
     "grunt-auto-install": "^0.2.4",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-symlink": "^0.3.0",
-    "grunt-mocha-test": "^0.12.7",
-    "jade": "^1.11.0"
+    "grunt-mocha-test": "^0.12.7"
   }
 }
