first functional frontend prototype

--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -1,9 +1,5 @@
 {
   "main": "index.js",
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
-  "license": "AGPL-3.0",
-  "dependencies": {
-    "express": "^4.13.3",
-    "jade": "^1.11.0"
-  }
+  "license": "AGPL-3.0"
 }
