--- a/core/frontend/bower.json
+++ b/core/frontend/bower.json
@@ -21,6 +21,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.5"
   }
 }
