--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "glob": "^5.0.15",
     "grunt-auto-install": "^0.2.4",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-symlink": "^0.3.0",
     "grunt-mocha-test": "^0.12.7"
   }
