--- a/core/frontend/bower.json
+++ b/core/frontend/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular": "~1.4.7",
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "font-awesome": "fontawesome#~4.4.0"
   }
 }
