add dependency resolving system, break everything else

--- a/core/backend/config/package.json
+++ b/core/backend/config/package.json
@@ -13,7 +13,6 @@
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
   "license": "AGPL-3.0",
   "dependencies": {
-    "dotenv": "^1.2.0",
-    "harmony-reflect": "^1.4.2"
+    "dotenv": "^1.2.0"
   }
 }
