--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
+    "callsite": "^1.0.0",
     "glob": "^5.0.15",
     "grunt-auto-install": "^0.2.4",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-symlink": "^0.3.0",
-    "grunt-mocha-test": "^0.12.7"
+    "grunt-mocha-test": "^0.12.7",
+    "harmony-reflect": "^1.4.2"
   }
 }
