--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "callsite": "^1.0.0",
     "glob": "^5.0.15",
     "grunt-auto-install": "^0.2.4",
