--- a/core/frontend/bower.json
+++ b/core/frontend/bower.json
@@ -26,6 +26,7 @@
     "bootstrap": "~3.3.5",
     "font-awesome": "fontawesome#~4.4.0",
     "angular-bootstrap": "~0.14.1",
-    "oclazyload": "~1.0.6"
+    "oclazyload": "~1.0.6",
+    "angular-route": "~1.4.7"
   }
 }
