--- a/core/backend/modules/db/package.json
+++ b/core/backend/modules/db/package.json
@@ -14,6 +14,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "moment": "^2.10.6",
     "mongoose": "^4.1.9"
   },
   "devDependencies": {
