--- a/core/frontend/bower.json
+++ b/core/frontend/bower.json
@@ -27,6 +27,6 @@
     "font-awesome": "fontawesome#~4.4.0",
     "angular-bootstrap": "~0.14.1",
     "oclazyload": "~1.0.6",
-    "angular-route": "~1.4.7"
+    "Bootflat": "~2.0.4"
   }
 }
