--- a/core/frontend/bower.json
+++ b/core/frontend/bower.json
@@ -27,6 +27,7 @@
     "font-awesome": "fontawesome#~4.4.0",
     "angular-bootstrap": "~0.14.1",
     "oclazyload": "~1.0.6",
-    "Bootflat": "~2.0.4"
+    "Bootflat": "~2.0.4",
+    "angular-route": "~1.4.7"
   }
 }
