--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -2,8 +2,5 @@
   "main": "index.js",
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
   "license": "AGPL-3.0",
-  "dependencies": {
-    "express": "^4.13.3",
-    "jade": "^1.11.0"
-  }
+  "dependencies": {}
 }
