--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -2,5 +2,7 @@
   "main": "index.js",
   "author": "Luis Sieira <luis.sieira@spacebar.fr> (http://www.spacebar.fr/)",
   "license": "AGPL-3.0",
-  "dependencies": {}
+  "dependencies": {
+    "q": "^1.4.1"
+  }
 }
