--- a/core/backend/modules/db/package.json
+++ b/core/backend/modules/db/package.json
@@ -4,12 +4,6 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "moment": "^2.10.6",
-    "mongoose": "^4.1.9"
-  },
-  "devDependencies": {
-    "mocha": "^2.3.3",
-    "mocha-mongoose": "^1.1.0",
-    "mongodb": "^2.0.45"
+    "moment": "^2.10.6"
   }
 }
