--- a/core/frontend/bower.json
+++ b/core/frontend/bower.json
@@ -28,6 +28,8 @@
     "angular-bootstrap": "~0.14.1",
     "oclazyload": "~1.0.6",
     "Bootflat": "~2.0.4",
-    "angular-route": "~1.4.7"
+    "angular-route": "~1.4.7",
+    "showdown": "~1.3.0",
+    "angular-sanitize": "~1.4.7"
   }
 }
