--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chai": "^3.3.0",
     "mocha": "^2.3.3",
     "mongoose": "^4.2.4",
-    "mongoose-extend": "^0.1.0",
+    "mongoose-schema-extend": "^0.1.8",
     "supertest": "^1.1.0"
   },
   "dependencies": {
