--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "chai": "^3.3.0",
     "mocha": "^2.3.3",
-    "mongoose": "^4.2.4",
+    "mongoose": ">=5.7.5",
     "mongoose-schema-extend": "^0.2.1",
     "supertest": "^1.1.0"
   },
